them danh gia sản pẩm

--- a/Product_Detail/ProductDetail.html
+++ b/Product_Detail/ProductDetail.html
@@ -71,7 +71,55 @@
         </div>
         <div class="product-info"></div>
         <div id="viewed-root"></div>
+        <div class="reviews">
+
+            <div class="review-item">
+                <div class="review-header">
+                    <span class="review-name">Huỳnh Trịnh</span>
+                    <span class="review-stars">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+            </span>
+                </div>
+
+                <div class="review-time">2 ngày trước</div>
+
+                <div class="review-content">
+                    Sản phẩm rất tốt, giao nhanh. Đáng tiền!
+                </div>
+
+                <div class="review-images">
+                    <img src="https://via.placeholder.com/80">
+                    <img src="https://via.placeholder.com/80">
+                </div>
+            </div>
+
+            <div class="review-item">
+                <div class="review-header">
+                    <span class="review-name">Minh Anh</span>
+                    <span class="review-stars">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+            </span>
+                </div>
+
+                <div class="review-time">1 tuần trước</div>
+
+                <div class="review-content">
+                    Dùng ổn, nhưng hơi ồn một chút.
+                </div>
+            </div>
+
+        </div>
+
     </div>
+
     <div class="content">
         <section class="feature-strip">
             <div class="feature">
@@ -161,9 +209,7 @@
 </div>
 <script src="JS/inforProduct.js"></script>
 <script src="../style/header/header.js"></script>
-
 <script src="JS/view.js"></script>
-
 <script src="JS/product_detail.js"></script>
 
 
