--- a/Admin/calendar.html
+++ b/Admin/calendar.html
@@ -36,16 +36,17 @@
            aria-hidden="false">
 
         <div class="sidebar-title">Quản trị</div>
-
         <nav class="menu">
             <a class="menu-item" href="overview.html">🏠 Tổng quan</a>
             <a class="menu-item" href="accounts.html">👥 Tài khoản</a>
             <a class="menu-item" href="products.html">🧰 Sản phẩm</a>
             <a class="menu-item" href="orders.html">🧾 Đơn hàng</a>
+            <a class="menu-item" href="calendar.html">💹 Lịch Khám</a>
             <a class="menu-item" href="revenue.html">💹 Doanh thu</a>
             <a class="menu-item" href="settings.html">⚙️ Cài đặt</a>
             <a class="menu-item danger" href="#">🚪 Đăng xuất</a>
         </nav>
+
 
     </aside>
 
