--- a/Admin/revenue.html
+++ b/Admin/revenue.html
@@ -48,6 +48,7 @@
             <a class="menu-item" href="accounts.html">👥 Tài khoản</a>
             <a class="menu-item" href="products.html">🧰 Sản phẩm</a>
             <a class="menu-item" href="orders.html">🧾 Đơn hàng</a>
+            <a class="menu-item" href="calendar.html">💹 Lịch Khám</a>
             <a class="menu-item" href="revenue.html">💹 Doanh thu</a>
             <a class="menu-item" href="settings.html">⚙️ Cài đặt</a>
             <a class="menu-item danger" href="#">🚪 Đăng xuất</a>
