Chỉnh lại phần thông tin đăng nhập

--- a/Login/login.html
+++ b/Login/login.html
@@ -60,7 +60,7 @@
     <div class="login-box">
       <h2>Đăng nhập</h2>
       <form action="../User/User_home/user_home.html" method="get">
-        <input type="text" placeholder="Nhập số điện thoại" required>
+        <input type="text" placeholder="Nhập email" required>
         <input type="password" placeholder="Mật khẩu" required>
         <a href="recover_password.html" class="forgot">Quên mật khẩu?</a>
         <button type="submit" class="btn-login"> Đăng nhập</button>
@@ -70,7 +70,7 @@
 
       <div class="divider">HOẶC</div>
 
-      <button class="btn-social email">✉️ Đăng nhập bằng email</button>
+      <!-- <button class="btn-social email">✉️ Đăng nhập bằng email</button> -->
       <button class="btn-social zalo">💬 Đăng nhập bằng Zalo</button>
       <button class="btn-social google">🌐 Đăng nhập bằng Google</button>
     </div>
