Chỉnh lại cái trạng thái của các page

--- a/User/User_sidebar/user_sidebar.html
+++ b/User/User_sidebar/user_sidebar.html
@@ -27,7 +27,7 @@
         </li>
 
         <li>
-            <a href="../History/history.html">
+            <a href="../Purchase_history/purchase_history.html">
                 <i class="fa-regular fa-clock"></i> Lịch sử mua hàng
             </a>
         </li>
@@ -39,7 +39,7 @@
         </li>
 
         <li>
-            <a href="../Rating/my_rating.html">
+            <a href="../Rating/myrate.html">
                 <i class="fa-regular fa-star"></i> Đánh giá của tôi
             </a>
         </li>
