--- a/User/Address/address.html
+++ b/User/Address/address.html
@@ -5,10 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sổ địa chỉ</title>
+  <link rel="stylesheet" href="address.css">
   <link rel="stylesheet" href="../../style/header/header.css" />
   <link rel="stylesheet" href="../User_sidebar/user_sidebar.css" />
   <link rel="stylesheet" href="../../style/footer/footer.css" />
-  <link rel="stylesheet" href="address.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 <body>
@@ -85,7 +86,7 @@
         </li>
 
         <li>
-          <a href="../Rating/my_rating.html">
+          <a href="../Rating/myrate.html">
             <i class="fa-regular fa-star"></i> Đánh giá của tôi
           </a>
         </li>
@@ -109,7 +110,7 @@
       </div>
 
       <div class="address-box">
-        <p>Chưa có địa chỉ nào.</p>
+        <p>+ Thêm địa chỉ</p>
       </div>
     </section>
   </main>
