--- a/User/Purchase_history/purchase_history.html
+++ b/User/Purchase_history/purchase_history.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="../../style/header/header.css" />
   <link rel="stylesheet" href="../User_sidebar/user_sidebar.css" />
   <link rel="stylesheet" href="../../style/footer/footer.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 <body>
