--- a/User/User_home/user_home.html
+++ b/User/User_home/user_home.html
@@ -87,7 +87,7 @@
                 </li>
 
                 <li>
-                    <a href="../Rating/my_rating.html">
+                    <a href="../Rating/myrate.html">
                         <i class="fa-regular fa-star"></i> Đánh giá của tôi
                     </a>
                 </li>
