--- a/User/Viewed_products/viewed_products.html
+++ b/User/Viewed_products/viewed_products.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../../style/header/header.css" />
     <link rel="stylesheet" href="../User_sidebar/user_sidebar.css" />
     <link rel="stylesheet" href="../../style/footer/footer.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 <body>
@@ -88,7 +89,7 @@
                 </li>
 
                 <li>
-                    <a href="../Rating/my_rating.html">
+                    <a href="../Rating/myrate.html">
                         <i class="fa-regular fa-star"></i> Đánh giá của tôi
                     </a>
                 </li>
