--- a/Admin/overview.html
+++ b/Admin/overview.html
@@ -14,7 +14,7 @@
 <!-- HEADER -->
 <header class="site-header">
     <button id="btn-toggle" class="hamburger" aria-label="Mở/đóng menu" aria-controls="sidebar" aria-expanded="true">☰</button>
-    <a href="#" class="logo">META</a>
+    <a href="#" class="logo">HKH</a>
     <form class="searchbar" action="#" role="search">
         <input type="text" placeholder="Tìm nhanh..." />
         <button type="submit">Tìm</button>
