Chỉnh sửa tieu de

--- a/Booking/Booking.html
+++ b/Booking/Booking.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Đặt lịch chăm sóc sức khỏe - META</title>
+  <title>Đặt lịch chăm sóc sức khỏe - HKH</title>
   <link rel="stylesheet" href="../style/header/header_logged_registed.css">
   <link rel="stylesheet" href="booking.css">
   <link rel="stylesheet"
