--- a/Login/recover_password.html
+++ b/Login/recover_password.html
@@ -16,7 +16,7 @@
     <header class="site-header">
         <div class="header-left">
             <input type="checkbox" id="nav-toggle" hidden>
-            <a href="/WebProject/index.html" class="logo">META</a>
+            <a href="/WebProject/index.html" class="logo">HKH</a>
         </div>
 
         <form class="searchbar" action="#" method="get">
