Tạo trang xem lại lịch đặt chăm sóc sức khỏe

--- a/src/main/webapp/Customer/User_sidebar/user_sidebar.html
+++ b/src/main/webapp/Customer/User_sidebar/user_sidebar.html
@@ -34,7 +34,7 @@
 
         <li>
             <a href="../Viewed_products/viewed_products.html">
-                <i class="fa-regular fa-eye"></i> Sản phẩm đã xem
+                <i class="fa-regular fa-eye"></i> Lịch chăm sóc sức khỏe
             </a>
         </li>
 
