--- a/src/main/webapp/Customer/Viewed_products/viewed_products.html
+++ b/src/main/webapp/Customer/Viewed_products/viewed_products.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sản phẩm đã xem</title>
+    <title>Xem lịch đặt khám</title>
     <link rel="stylesheet" href="viewed_products.css">
     <link rel="stylesheet" href="../../style/header/header.css" />
     <link rel="stylesheet" href="../User_sidebar/user_sidebar.css" />
@@ -84,7 +84,7 @@
 
             <li class="active">
                 <a href="../Viewed_products/viewed_products.html">
-                    <i class="fa-regular fa-eye"></i> Sản phẩm đã xem
+                    <i class="fa-regular fa-eye"></i> Xem lịch đặt khám
                 </a>
             </li>
 
@@ -105,9 +105,9 @@
 
     <!-- Main content -->
     <main class="view-products-container">
-        <h2 class="title">Sản phẩm đã xem gần đây</h2>
+        <h2 class="title">Xem lịch chăm sóc sức khỏe gần đây</h2>
         <div class="view-products-content">
-            <p class="empty-message">Quý khách chưa xem sản phẩm nào.</p>
+            <p class="empty-message">Quý khách chưa có lịch đặt chăm sóc nào.</p>
         </div>
     </main>
 </div>
